--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: kramodp
 #github_username:  kramodp17
 
 # Build settings
-theme: minima
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
